fix: Transaction table overflow issues

--- a/client/src/components/TransactionView/style.module.scss
+++ b/client/src/components/TransactionView/style.module.scss
@@ -24,6 +24,8 @@
   display: block;
   max-width: 708px;
   overflow: auto;
+  word-wrap: break-word;
+  font-family: menlo, 'Courier New', Courier, monospace;
 }
 
 .methodName {
